--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ message(include dir:${NEED_INCLUDE_DIRS})
 include_directories(${NEED_INCLUDE_DIRS})
 message(lib dir:${NEED_LIBRARY_DIRS})
 link_directories(${NEED_LIBRARY_DIRS})
-message(lib:${NEED_LIBRARIES})
+message("lib:${NEED_LIBRARIES}")
 
 add_executable(ffmpeg_sdl tutor5.c)
 target_link_libraries(ffmpeg_sdl ${NEED_LIBRARIES})
